# mamnatroot-pkg

./: .gitignore  README.md  example.py  pyproject.toml
src/mamnatroot/: __init__.py  solver.py
