[project]
name = "mamnatroot"
version = "0.1.0"
description = ""
authors = [
    {name = "Charbel Mamlankou",email = "charbelzeusmamlankou@gmail.com", name="Eudes Natabou", email="eudesnatabou@gmail.com"}
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mamlankou/mamnatroot"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "mamnatroot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
